<resources>
    <string name="app_name">Магазин</string>
    <string name="Header">Оформление заказа</string>
    <string name="Total">Итого</string>
    <string name="CostSum">Стоимость блюд</string>
    <string name="Discount">Скидка</string>
    <string name="MiddleName">Отчество</string>
    <string name="FirstName">Имя</string>
    <string name="LastName">Фамилия</string>
    <string name="Phone">Телефон</string>
    <string name="SendOrder">Оформить заказ</string>
    <string name="ChoosePayWay">Выберите способ оплаты</string>
    <string name="ByCash">Наличными</string>
    <string name="ByCard">Картой при получении</string>
    <string name="PhoneNumber">Номер телефона</string>
    <string name="PhoneExample">Пример, 89999999999 или +79999999999</string>
    <string name="HeaderCatalog">Меню на неделю</string>
    <string name="MakeAnOrder">Оформить заказ</string>
    <string name="HeaderProduct">О блюде</string>
    <string name="HeaderBasket">Корзина</string>
    <string name="GoToBasket">Перейти в корзину</string>
    <string name="ProductDetail">Просмотреть товар</string>
    <string name="ToCatalog">К каталогу</string>
    <string name="AddProductToBasket">Добавить в корзину</string>

    <string name="price">Цена</string>
    <string name="product_title">Title</string>
    <string name="price_with_discount">Итог</string>
    <string name="discount_present">Процент</string>
    <string name="btn_buy_cart">Оформить заказ</string>
    <string name="total_price">Итог</string>
    <string name="discount_price">Скидка</string>
    <string name="price_header">Цена</string>
    <string name="title_header">Наименование</string>
    <string name="detailed_photo_title">detailed photo</string>
    <string name="some_text">someText</string>
    <string name="ViewedHeaderCatalog">Просмотренные товары</string>
</resources>
