<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.CheckoutActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/checkoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:height="64dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/MakeAnOrder"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgArrowCheckout"
            android:layout_width="40dp"
            android:layout_height="64dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/detailHeader"
            app:layout_constraintStart_toStartOf="@+id/detailHeader"
            app:layout_constraintTop_toTopOf="@+id/detailHeader"
            app:srcCompat="@drawable/ic_arrow_back_white"
            tools:ignore="MissingConstraints,VectorDrawableCompat" />

        <TextView
            android:id="@+id/txtTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:includeFontPadding="false"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/Total"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtTotalSum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtTotalSum"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/txtTotalSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="1500Р"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/txtCostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:text="@string/CostSum"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtCostSum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalText"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/txtCostSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="1500Р"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalSum"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/txtDiscountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:text="@string/Discount"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtDiscountSum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCostText"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <TextView
            android:id="@+id/txtDiscountSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="-10000Р"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCostSum"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/LastName"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="@+id/txtDiscountSum"
            app:layout_constraintStart_toStartOf="@+id/txtDiscountText"
            app:layout_constraintTop_toBottomOf="@+id/txtDiscountText" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/FirstName"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="@+id/txtLastName"
            app:layout_constraintStart_toStartOf="@+id/txtLastName"
            app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

        <EditText
            android:id="@+id/txtMiddleName"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/MiddleName"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="@+id/txtFirstName"
            app:layout_constraintStart_toStartOf="@+id/txtFirstName"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstName" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPayMethod"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">

            <RadioButton
                android:id="@+id/rbByCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ByCash"
                app:layout_constraintBottom_toBottomOf="@+id/rbByCard"
                app:layout_constraintTop_toTopOf="@+id/rbByCard"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="20dp" />

            <RadioButton
                android:id="@+id/rbByCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/ByCard"
                app:layout_constraintStart_toEndOf="@+id/rbByCash"
                tools:layout_editor_absoluteY="499dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtPayMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:paddingLeft="20dp"
            android:text="@string/ChoosePayWay"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/txtPhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnOrder"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="320dp"
            android:layout_height="59dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/SendOrder"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/txtPhoneNumber"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/PhoneNumber"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="@+id/txtMiddleName"
            app:layout_constraintStart_toStartOf="@+id/txtMiddleName"
            app:layout_constraintTop_toBottomOf="@+id/txtMiddleName" />

        <TextView
            android:id="@+id/txtPhoneExample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PhoneExample"
            app:layout_constraintEnd_toEndOf="@+id/txtPhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
