<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:isScrollContainer="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:height="64dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/HeaderProduct"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgArrowDetail"
            android:layout_width="40dp"
            android:layout_height="64dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/detailHeader"
            app:layout_constraintStart_toStartOf="@+id/detailHeader"
            app:layout_constraintTop_toTopOf="@+id/detailHeader"
            app:srcCompat="@drawable/ic_arrow_back_white"
            tools:ignore="MissingConstraints,VectorDrawableCompat" />


        <ImageView
            android:id="@+id/ivDetailedImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/detailed_photo_title"
            android:src="@drawable/dish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailHeader" />

        <TextView
            android:id="@+id/tvDetailedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/some_text"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDetailedImage" />

        <TextView
            android:id="@+id/tvDetailedPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailedTitle" />


        <Button
            android:id="@+id/btnAddProductToBasket"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:width="300dp"
            android:height="60dp"
            android:text="@string/AddProductToBasket"
            app:layout_constraintBottom_toBottomOf="@+id/tvDetailedPrice"
            app:layout_constraintEnd_toEndOf="@+id/tvDetailedTitle"
            app:layout_constraintStart_toStartOf="@+id/tvDetailedTitle"
            app:layout_constraintTop_toTopOf="@+id/tvDetailedPrice"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>