<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TextView
        android:id="@+id/basketHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="0dp"
        android:height="64dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/HeaderBasket"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgArrowBasket"
        android:layout_width="40dp"
        android:layout_height="64dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/basketHeader"
        app:layout_constraintStart_toStartOf="@+id/basketHeader"
        app:layout_constraintTop_toTopOf="@+id/basketHeader"
        app:srcCompat="@drawable/ic_arrow_back_white"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basketRv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMakeAnOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketHeader" />

    <Button
        android:id="@+id/btnMakeAnOrder"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:width="165dp"
        android:text="@string/MakeAnOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtHeader"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnBasketToCatalog"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:width="165dp"
        android:text="@string/ToCatalog"
        app:layout_constraintBottom_toBottomOf="@+id/btnMakeAnOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnMakeAnOrder"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>